examples/bad/local_var.ypl
fun(): {
    out(a);
}

main(): {
    a=5;
    fun();
}